<?xml version="1.0"?>
<package format="2">
  <name>sma-lab2</name>
  <version>1.0.0</version>
  <description>Smart Robot Laboratory</description>

  <maintainer email="kazuki.hiraizumi@ca-giken.com">KazukiHiraizumi</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/CA-Giken/sma-lab2</url>
  <author email="kazuki.hiraizumi@ca-giken.com">KazukiHiraizumi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>smabo</depend>
  <depend>rovi_industrial</depend>
  <depend>rtk_tools</depend>
</package>
